--- a/pages/404.html
+++ b/pages/404.html
@@ -20,6 +20,6 @@ layout: default
 <div class="container">
   <h1>404</h1>
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p><strong>Siden kunne ikke findes :(</strong></p>
+  <p>Tjek at du har indtastet den ønskede url i adressefeltet.</p>
 </div>
